--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
