--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.3",
     "save": "^2.9.0",
     "validator": "^13.15.0"
   },
